--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,7 @@
       rel="stylesheet"
     />
     <title>Портфолио</title>
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/portfolio-css.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -71,7 +70,7 @@
       <!-- Завершенные проекты -->
       <section class="projects">
         <h2 hidden>Завершенные проекты</h2>
-        <ul>
+        <ul class="list">
           <li>
             <a href="" class="project-link">
               <img
@@ -174,27 +173,27 @@
       </section>
     </main>
     <!-- Футтер -->
-    <footer>
+    <footer class="page-footer">
       <a href="" class="logo">
         <span class="first-half">Web</span>
         <span class="white-half">Studio</span>
       </a>
       <address class="address">
         <ul>
-          <li>
+          <li class="list">
             <a
-              class="location"
+              class="list location"
               href="https://goo.gl/maps/r5CcagLjubWfefs69"
               target="_blank"
               rel="nooper norefferer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="list">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="list">
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
