--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       rel="stylesheet"
     />
     <title>Портфолио</title>
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/index-css.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -85,13 +84,13 @@
       <section class="we-do">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul>
-          <li>
+          <li class="list">
             <img src="./images/box1.jpg" alt="процесс программирования" width="370" />
           </li>
-          <li>
+          <li class="list">
             <img src="./images/box2.jpg" alt="адаптирование под смартфон" width="370" />
           </li>
-          <li>
+          <li class="list">
             <img src="./images/box3.jpg" alt="адаптирование под планшет" width="370" />
           </li>
         </ul>
@@ -99,52 +98,52 @@
       <!-- Команда -->
       <section class="team">
         <h2 class="title">Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/igor_d_photo.jpg" alt="Игорь Демьяненко" width="270" />
             <h3 class="member">Игорь Демьяненко</h3>
-            <p class="job" lang="en">Product Designer</p>
+            <p class="position" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/olga_r_photo.jpg" alt="Ольга Репина" width="270" />
             <h3 class="member">Ольга Репина</h3>
-            <p class="job" lang="en">Frontend Developer</p>
+            <p class="position" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/nikolay_t_photo.jpg" alt="Николай Тарасов" width="270" />
             <h3 class="member">Николай Тарасов</h3>
-            <p class="job" lang="en">Marketing</p>
+            <p class="position" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/mickhail_e_photo.jpg" alt="Михаил Ермаков" width="270" />
             <h3 class="member">Михаил Ермаков</h3>
-            <p class="job" lang="en">UI Designer</p>
+            <p class="position" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Футтер -->
-    <footer>
+    <footer class="page-footer">
       <a href="" class="logo">
         <span class="first-half">Web</span>
         <span class="white-half">Studio</span>
       </a>
       <address class="address">
         <ul>
-          <li>
+          <li class="list">
             <a
-              class="location"
+              class="list location"
               href="https://goo.gl/maps/r5CcagLjubWfefs69"
               target="_blank"
               rel="nooper norefferer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="list">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="list">
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
