--- a/index.html
+++ b/index.html
@@ -16,134 +16,129 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Шапка сайта -->
+    <!--SITE HEADER-->
     <header>
-      <nav>
-        <a href="" class="logo">
-          <span class="first-half">Web</span>
-          <span class="second-half">Studio</span>
-        </a>
-        <ul class="site-nav">
-          <li class="list">
-            <a href="./index.html" class="link current">Студия</a>
+      <nav class="site-nav">
+        <a href="" class="site-logo link">Web<span class="logo-second-half">Studio</span></a>
+        <ul class="site-nav-list list">
+          <li class="site-nav-item">
+            <a href="./index.html" class="site-nav-link link current">Студия</a>
           </li>
-          <li class="list">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+          <li class="site-nav-item">
+            <a href="./portfolio.html" class="site-nav-link link">Портфолио</a>
           </li>
-          <li class="list">
-            <a href="" class="link">Контакты</a>
+          <li class="site-nav-item">
+            <a href="" class="site-nav-link link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="contacts">
-        <li class="list">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          <a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a>
         </li>
-        <li class="list">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+        <li class="contacts-item">
+          <a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
+    <!-- MAIN -->
     <main>
-      <!-- Герой -->
+      <!-- HERO SECTION -->
       <section class="hero-section">
-        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
-      <!-- Преимущества -->
-      <section class="advantages">
-        <h2 hidden>Наши преимущества</h2>
-        <ul class="advantages-list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="info">
+      <!-- ADVANTAGES -->
+      <section class="advantages-section">
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <ul class="advantages-list list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Внимание к деталям</h3>
+            <p class="advantages-description">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="info">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Пунктуальность</h3>
+            <p class="advantages-description">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="info">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Планирование</h3>
+            <p class="advantages-description">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="info">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Современные технологии</h3>
+            <p class="advantages-description">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Чем мы занимаемся -->
-      <section class="we-do">
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul>
-          <li class="list">
+      <!-- WHAT CAN WE MAKE -->
+      <section class="we-make">
+        <h2 class="we-make-title">Чем мы занимаемся</h2>
+        <ul class="we-make-list list">
+          <li class="we-make-item">
             <img src="./images/box1.jpg" alt="процесс программирования" width="370" />
           </li>
-          <li class="list">
+          <li class="we-make-item">
             <img src="./images/box2.jpg" alt="адаптирование под смартфон" width="370" />
           </li>
-          <li class="list">
+          <li class="we-make-item">
             <img src="./images/box3.jpg" alt="адаптирование под планшет" width="370" />
           </li>
         </ul>
       </section>
-      <!-- Команда -->
-      <section class="team">
-        <h2 class="title">Наша команда</h2>
-        <ul class="list">
-          <li>
+      <!-- TEAM -->
+      <section class="team-section">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img src="./images/igor_d_photo.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="member">Игорь Демьяненко</h3>
-            <p class="position" lang="en">Product Designer</p>
+            <h3 class="team-title-member">Игорь Демьяненко</h3>
+            <p class="team-member-description" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/olga_r_photo.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="member">Ольга Репина</h3>
-            <p class="position" lang="en">Frontend Developer</p>
+            <h3 class="team-title-member">Ольга Репина</h3>
+            <p class="team-description" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/nikolay_t_photo.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="member">Николай Тарасов</h3>
-            <p class="position" lang="en">Marketing</p>
+            <h3 class="team-title-member">Николай Тарасов</h3>
+            <p class="team-description" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/mickhail_e_photo.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="member">Михаил Ермаков</h3>
-            <p class="position" lang="en">UI Designer</p>
+            <h3 class="team-title-member">Михаил Ермаков</h3>
+            <p class="team-description" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <!-- Футтер -->
-    <footer class="page-footer">
-      <a href="" class="logo">
-        <span class="first-half">Web</span>
-        <span class="white-half">Studio</span>
-      </a>
-      <address class="address">
-        <ul>
-          <li class="list">
+    <!-- FOOTER -->
+    <footer class="footer">
+      <a href="" class="site-logo link">Web<span class="white-half-logo">Studio</span> </a>
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li class="footer-item">
             <a
-              class="list location"
+              class="footer-link-location link"
               href="https://goo.gl/maps/r5CcagLjubWfefs69"
               target="_blank"
               rel="nooper norefferer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="list">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="list">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
