--- a/portfolio.html
+++ b/portfolio.html
@@ -16,184 +16,171 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Шапка сайта -->
+    <!-- HEADER -->
     <header>
-      <!-- Навигация -->
-      <nav>
-        <a href="" class="logo">
-          <span class="first-half">Web</span>
-          <span class="second-half">Studio</span>
-        </a>
-        <ul class="site-nav">
-          <li class="list">
-            <a href="./index.html" class="link">Студия</a>
+      <nav class="site-nav">
+        <a href="" class="site-logo link">Web<span class="logo-second-half">Studio</span></a>
+        <ul class="site-nav-list list">
+          <li class="site-nav-item">
+            <a href="./index.html" class="site-nav-link link ">Студия</a>
           </li>
-          <li class="list">
-            <a href="" class="link current">Портфолио</a>
+          <li class="site-nav-item">
+            <a href="./portfolio.html" class="site-nav-link current link">Портфолио</a>
           </li>
-          <li class="list">
-            <a href="" class="link">Контакты</a>
+          <li class="site-nav-item">
+            <a href="" class="site-nav-link link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="contacts">
-        <li class="list">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          <a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a>
         </li>
-        <li class="list">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+        <li class="contacts-item">
+          <a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
+    <!-- MAIN -->
     <main>
-      <!-- Фильтр на странице  -->
-      <section class="filter-nav">
-        <h1 hidden>Проекты</h1>
-        <ul>
-          <li class="filter-names">
-            <button type="button" class="buttons">Все</button>
-          </li>
-          <li class="filter-names">
-            <button type="button" class="buttons">Веб-сайты</button>
-          </li>
-          <li class="filter-names">
-            <button type="button" class="buttons">Приложения</button>
-          </li>
-          <li class="filter-names">
-            <button type="button" class="buttons">Дизайн</button>
-          </li>
-          <li class="filter-names">
-            <button type="button" class="buttons">Маркетинг</button>
-          </li>
-        </ul>
-      </section>
-      <!-- Завершенные проекты -->
-      <section class="projects">
-        <h2 hidden>Завершенные проекты</h2>
-        <ul class="list">
-          <li>
-            <a href="" class="project-link">
+      <section>
+      <!-- FILTER NAVIGATION  -->
+      <h1 class="visually-hidden">Проекты</h1>
+        <ul class="filter-nav-list list">
+        <li class="filter-nav-item">
+          <button type="button" class="filter-nav-buttons">Все</button>
+        </li>
+        <li class="filter-nav-item">
+          <button type="button" class="filter-nav-buttons">Веб-сайты</button>
+        </li>
+        <li class="filter-nav-item">
+          <button type="button" class="filter-nav-buttons">Приложения</button>
+        </li>
+        <li class="filter-nav-item">
+          <button type="button" class="filter-nav-buttons">Дизайн</button>
+        </li>
+        <li class="filter-nav-item">
+          <button type="button" class="filter-nav-buttons">Маркетинг</button>
+        </li>
+      </ul>
+
+<!-- PROJECTS -->
+        <ul class="projects-list list">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
-                class="project-img"
                 src="./images/laptop_img.jpg"
                 alt="открытый ноутбук"
                 width="370"
               />
-              <h3 class="title">Технокряк</h3>
-              <p class="project-name">Веб-сайт</p>
+              <h2 class="projects-title">Технокряк</h2>
+              <p class="projects-description">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
-              <img src="./images/basketball_img.jpg" alt="игра в баскетбол" width="370" />
-              <h3 class="title">Постер <span lang="en">Orlean vs Golden Star</span></h3>
-              <p class="project-name">Дизайн</p>
+          <li class="projects-item">
+            <a href="" class="projects-link link">
+              <img src="./images/basketball_img.jpg"
+              alt="игра в баскетбол"
+              width="370" />
+              <h2 class="projects-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+              <p class="projects-description">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
-                class="project-img"
                 src="./images/seafood_img.jpg"
                 alt="логотип ресторана"
                 width="370"
               />
-              <h3 class="title">Ресторан Seafood</h3>
-              <p class="project-name">Приложение</p>
+              <h2 class="projects-title">Ресторан Seafood</h2>
+              <p class="projects-description">Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
-                class="project-img"
                 src="./images/headphones_img.jpg"
                 alt="наушники"
                 width="370"
               />
-              <h3 class="title">Проект <span lang="en">Prime</span></h3>
-              <p class="project-name">Маркетинг</p>
+              <h2 class="projects-title">Проект <span lang="en">Prime</span></h2>
+              <p class="projects-description">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
-                class="project-img"
                 src="./images/boxes_img.jpg"
                 alt="две картонные коробки"
                 width="370"
               />
-              <h3 class="title">Проект <span lang="en">Boxes</span></h3>
-              <p class="project-name">Приложение</p>
+              <h2 class="projects-title">Проект <span lang="en">Boxes</span></h3>
+              <p class="projects-description">Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
-              <img class="project-img" src="./images/computer_img.jpg" alt="моноблок" width="370" />
-              <h3 lang="en" class="title">Inspiration has no Borders</h3>
-              <p class="project-name">Веб-сайт</p>
+          <li class="projects-item">
+            <a href="" class="projects-link link">
+              <img src="./images/computer_img.jpg" alt="моноблок" width="370" />
+              <h2 class="projects-title" lang="en">Inspiration has no Borders</h2>
+              <p class="projects-description">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
-                class="project-img"
                 src="./images/book_img.jpg"
                 alt="открытая книга"
                 width="370"
               />
-              <h3 class="title">Издание <span lang="en">Limited Edition</span></h3>
-              <p class="project-name">Дизайн</p>
+              <h2 class="projects-title">Издание <span lang="en">Limited Edition</span></h2>
+              <p class="projects-description">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
-                class="project-img"
                 src="./images/labeltag_project_img.jpg"
                 alt="бирка с надписью"
                 width="370"
               />
-              <h3 class="title">Проект <span lang="en">LAB</span></h3>
-              <p class="project-name">Маркетинг</p>
+              <h2 class="projects-title">Проект <span lang="en">LAB</span></h2>
+              <p class="projects-description">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="" class="project-link">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
-                class="project-img"
                 src="./images/gb_project_img.jpg"
                 alt="работа за ноутбуком"
                 width="370"
               />
-              <h3 lang="en" class="title">Growing Business</h3>
-              <p class="project-name">Приложение</p>
+              <h2 class="projects-title" lang="en">Growing Business</h2>
+              <p class="projects-description">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <!-- Футтер -->
-    <footer class="page-footer">
-      <a href="" class="logo">
-        <span class="first-half">Web</span>
-        <span class="white-half">Studio</span>
-      </a>
-      <address class="address">
-        <ul>
-          <li class="list">
+    <!-- FOOTER -->
+  <footer class="footer">
+      <a href="" class="site-logo link">Web<span class="white-half-logo">Studio</span> </a>
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li class="footer-item">
             <a
-              class="list location"
+              class="footer-link-location link"
               href="https://goo.gl/maps/r5CcagLjubWfefs69"
               target="_blank"
               rel="nooper norefferer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="list">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="list">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
